<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">BMS USR</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_back">Back</string>
    <string name="button_scan">Scan</string>
    <string name="about_dialog_title">About program</string>
    <string name="version_info">Version: %s</string>
    <string name="about_dialog_message">
        This application is designed for configuring and managing the Wi-Fi parameters of the USR-WIFI232-B2/A2 module. It is developed for use with the GBL_2.45K3 battery from GS Energy Storage (SYL Battery), which operates on the standard firmware (AB_AIO_4850_V1212_12101456) and uses the AoBo protocol over CAN.\n\n
        Version: %s\n\n
        Author: %s\n
        GitHub: %s
    </string>
    <string name="github_url" translatable="false">https://github.com/nickAS21/BMSUSRProvision_Android</string>
    <string name="author" translatable="false">Nick Kulikov (nickAS21)</string>

    <string name="press_again_to_exit">Click twice and quit</string>
    <string name="wifi_search_title" translatable="false">WiFi USR Provision</string>
    <string name="wifi_settings_title">WiFi USR settings</string>
    <string name="wifi_bms_saved_title">WiFi BMS saved</string>

    <string name="exit">Exit</string>
    <string name="ssid_hint" translatable="false">SSID</string>
    <string name="password_hint">Password</string>
    <string name="connected_to">Connected to %s</string>
    <string name="connection_to_waiting">Connecting to %s…</string>
    <string name="connected_to_success">Connected to %s</string>
    <string name="connection_failed_toast">Connection failed.</string>
    <string name="connection_lost">Connection to %s lost.</string>
    <string name="connection_to_failed">Connection to %s failed.</string>
    <string name="wifi_manager_not_initialized">WiFiManager not initialized</string>
    <string name="wifi_off_for_scan">Wi-Fi is off. Turn it on to scan.</string>
    <string name="location_off_for_scan">Turn on Location services to scan for Wi-Fi.</string>
    <string name="location_permission_denied">Location permission denied. Wi-Fi scanning is not possible.</string>
    <string name="scan_failed">Scan failed.</string>
    <string name="no_location_permission_connect">No location permission. Cannot connect.</string>
    <string name="cannot_add_or_find_network">Failed to add or find network.</string>
    <string name="cannot_start_wifi_scan">Failed to start Wi-Fi scan</string>
    <string name="scan_completed">Scan completed.</string>

    <string name="main_prompt_text">Select a network to connect</string>
    <string name="rescan_button_text">Scan again</string>

    <string name="bms_networks_updated">BMS network list updated.</string>
    <string name="bms_networks_updated_zero">BMS network list updated as empty.</string>
    <string name="update_settings_success">BMS WiFi settings updated to the selected network.</string>
    <string name="error_with_message">Error: %s</string>
    <string name="update_settings_sta_success">"Settings: AP+STA, Network A and B – client successfully updated"</string>
    <string name="update_settings_sta_error_continue">"Continue Wi-Fi setup despite error?"</string>
    <string name="update_settings_sta_error_continue_yes">"Yes"</string>
    <string name="update_settings_sta_error_continue_no">"No"</string>

    <string name="content_desc_back">Back</string>
    <string name="connected_to_title">Connected to:</string>
    <string name="connection_id_hint" translatable="false">Id</string>
    <string name="bms_networks_title">Available Wi-Fi networks from BMS:</string>
    <string name="network_info_title">About this network</string>
    <string name="example_id" translatable="false">Values ID</string>
    <string name="example_ssid">Values SSID</string>
    <string name="example_bssid">Values BSsid</string>
    <string name="example_bssid_bms" translatable="false">Values Ssid Bms</string>
    <string name="example_ip_wifi_home" translatable="false">Values Ip WiFi Home: [192.168.8.100 + id]</string>
    <string name="example_port_sta" translatable="false">Values Port STA Server Socket B: [18890 + id]</string>
    <string name="example_oui" translatable="false">Values Vendor</string>

    <string name="invalid_packet_length">Invalid packet length.</string>
    <string name="invalid_checksum">Invalid checksum.</string>
    <string name="invalid_decode_response_length">Invalid decode Response. Length &lt; 6</string>
    <string name="ssid_ok">ssid - OK</string>
    <string name="password_ok">password - OK</string>
    <string name="ssid_not_found_and_password_invalid">ssid not found and password invalid</string>
    <string name="ssid_not_found">ssid not found</string>
    <string name="password_invalid">password invalid</string>
    <string name="hex_length_error">Hex string must have an even length.</string>
    <string name="invalid_hex_char_error">Invalid hex character in string.</string>

    <string name="socket_init_error">Socket initialization error: %s</string>
    <string name="socket_not_initialized">Socket or MulticastLock not initialized.</string>
    <string name="command_not_formed">Command is not formed. Command.length == 0</string>
    <string name="udp_packet_sent">UDP packet sent.</string>
    <string name="response_received">Response received</string>
    <string name="no_response_from_bms">No response from BMS.</string>
    <string name="send_receive_error">Error sending/receiving: %s</string>

    <string name="bms_networks_updated_toast">BMS network list updated.</string>
    <string name="update_settings_success_toast">BMS WiFi settings updated to the selected network.</string>
    <string name="dialog_duplicate_entry_title">Duplicate Wi-Fi BMS</string>
    <string name="dialog_duplicate_entry_message">Wi-Fi BMS [%s], already exists, overwrite?</string>
    <string name="dialog_button_replace">Replace</string>
    <string name="error_with_message_toast">Error: %s</string>

    <string name="set_wifi_filter">Set Wi-Fi Filter</string>
    <string name="dialog_set_filter_title">Set Filter for Wi-Fi Networks</string>

    <string name="filter_updated_toast">Filter updated to: %s</string>
    <string name="filter_cannot_be_empty">Filter cannot be empty.</string>

    <string name="disable_filter_text">Disable Filter</string>
    <string name="enable_filter_text">Enable Filter</string>
    <string name="filter_enabled_toast">Filter enabled.</string>
    <string name="filter_disabled_toast">Filter disabled.</string>
    <string name="reset_filter_text">Reset Filter</string>
    <string name="filter_reset_toast">Filter reset to:      \nEnabled=\'%1$b\', Val=\'%2$s\'</string>
    <string name="reset_bms_wifi_map_text">Reset All Bms Wifi Map</string>
    <string name="reset_bms_wifi_map_text_title">Confirmation</string>
    <string name="reset_bms_wifi_map_text_msg">Are you sure you want to delete all BMS Wi-Fi settings entries?</string>
    <string name="add_bms_entry_text">Add BMS Network</string>
    <string name="add_add_net_a_ip_text">Add IP for Network A</string>
    <string name="add_add_net_b_ip_text">Add IP for Network B</string>
    <string name="netIpA_updated_toast">IP for Network A updated to: %s</string>
    <string name="netIpB_updated_toast">IP for Network B updated to: %s</string>
    <string name="netIpA_cannot_be_empty">IP for Network A cannot be empty.</string>
    <string name="netIpB_cannot_be_empty">IP for Network B cannot be empty.</string>
    <string name="dialog_set_net_a_ip_title">IP for Network A</string>
    <string name="dialog_set_net_b_ip_title">IP for Network B</string>
    <string name="updated_bms_entry_text">Edit BMS Network</string>
    <string name="dialog_add_bms_entry_title">Add New BMS Network</string>
    <string name="dialog_updated_bms_entry_title">Updated BMS Network</string>
    <string name="id_input_hint" translatable="false">ID</string>
    <string name="net_a_ip_input_hint" translatable="false">A Ip (STA mode CLIENT to SERVER)</string>
    <string name="net_b_ip_input_hint" translatable="false">B Ip (STA mode CLIENT to SERVER)</string>
    <string name="net_a_port_input_hint" translatable="false">Port for STA mode, then as CLIENT to SERVER out: 8890 + id</string>
    <string name="ssid_input_hint" translatable="false">SSID WIFI</string>
    <string name="ssid_bms_input_hint" translatable="false">SSID BMS</string>
    <string name="bssid_input_hint">BSSID (MAC Address)</string>

    <string name="net_b_port_input_hint" translatable="false">PORT (STA mode Server Socket B settings: 18890 + id)</string>
    <string name="entry_added_toast">Network %1$s added.</string>
    <string name="entry_not_added_toast">Network not added. Not all fields are filled in: ID, Net A Ip, SSID WIFI, BSSID (MAC Address).</string>
    <string name="entry_updated_toast">Network %1$s updated.</string>
    <string name="delete_bms_entry_text">Delete BMS Network</string>
    <string name="dialog_enter_ssid_title">Enter SSID to delete</string>
    <string name="entry_deleted_toast">Entry for %1$s has been deleted.</string>
    <string name="entry_not_found_toast">Network %1$s was not found.</string>
    <string name="indicate_of_process" translatable="false">Indicate of process</string>
    <string name="icon_by_level" translatable="false">Icon by level</string>
    <string name="details_entity_title">WiFi BMS Entity Details</string>
    <string name="details_info_entity_not">Detailed information is not available for this network.</string>
    <string name="details_entity_label_id" translatable="false">ID (Number):</string>
    <string name="details_entity_label_ssid" translatable="false">SSID WiFi BMS:</string>
    <string name="details_entity_label_ssid_bms" translatable="false">SSID BMS:</string>
    <string name="details_entity_label_bssid" translatable="false">BSSID (MAC):</string>
    <string name="details_entity_label_net_a_ip" translatable="false">Net A Ip (STA) (Server):</string>
    <string name="details_entity_label_net_a_port" translatable="false">Net A Port:</string>
    <string name="details_entity_label_net_b_ip" translatable="false">Socket B Ip:</string>
    <string name="details_entity_label_net_b_port" translatable="false">Socket B Port:</string>
    <string name="details_entity_label_vendor" translatable="false">Vendor (OUI):</string>
</resources>