<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageViewWifiSignal"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/icon_by_level"
        android:src="@drawable/ic_wifi_signal_4"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textViewSsid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:text="@string/example_ssid"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewBSsid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:text="@string/example_bssid"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imageViewTick"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/indicate_of_process"
        android:src="@drawable/ic_check_circle"
        android:visibility="gone"
        app:tint="@color/green" />

    <ImageView
        android:id="@+id/imageViewInfo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/indicate_of_process"
        android:src="@drawable/set_info_circle"
        android:visibility="gone"
        app:tint="@color/green" />

</LinearLayout>