<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-app"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground"> <ImageView
    android:id="@+id/imageViewWifiSignal"
    android:layout_width="24dp"
    android:layout_height="24dp"
    android:layout_gravity="center_vertical"
    android:contentDescription="@string/icon_by_level"
    android:src="@drawable/ic_wifi_signal_4"
    android:layout_marginEnd="16dp"
    app:tint="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <!-- ID + SSID в одному рядку -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/textViewSsid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/example_ssid"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:ellipsize="end"
                android:singleLine="true"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewBSsid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_bssid"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textViewSsidBms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_bssid_bms"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewTick"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/indicate_of_process"
        android:src="@drawable/ic_check_circle"
        android:visibility="gone"
        app:tint="@color/green" />

    <ImageView
        android:id="@+id/imageViewInfo"
        style="@style/ImageViewTintInfoStyle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/indicate_of_process"
        android:src="@drawable/set_info_circle"/>


</LinearLayout>