<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".provision.WiFiSearchActivity">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/content_desc_back"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textViewPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_prompt_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewWifiList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textViewPrompt"
        android:layout_above="@id/buttonRescan"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonRescan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/rescan_button_text"
        android:drawableStart="@drawable/ic_refresh"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:drawablePadding="8dp"
        android:layout_marginBottom="8dp" />

</RelativeLayout>